--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -136,6 +136,7 @@ ol {
 
 .about {
   position: relative;
+  overflow: hidden;
   margin-top: 0;
   padding: 0 0 72px;
 }
