--- a/scss/components/_services.scss
+++ b/scss/components/_services.scss
@@ -33,13 +33,23 @@
 }
 
 .swiper-wrapper {
+  width: 100%;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 
 .swiper-slide {
   display: flex;
   justify-content: center;
+}
+
+.services__slider:not(.swiper-initialized) .swiper-slide {
+  display: none;
+}
+
+.services__slider:not(.swiper-initialized) .swiper-slide:first-child {
+  display: flex;
 }
 
 .services__cards {
