--- a/scss/layouts/_responsive.scss
+++ b/scss/layouts/_responsive.scss
@@ -9,14 +9,16 @@
 
 .services {
   margin-top: -24px;
+  overflow: hidden;
+  contain: layout paint;
 }
 
 .services__container {
-  width: 1024px;
+  width: 320px;
   height: 502px;
-  max-width: none;
-  margin-left: 20px;
-  margin-right: 0;
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0;
 }
 
@@ -32,16 +34,16 @@
 }
 
 .services__slider {
-  width: 1024px;
-  max-width: 1024px;
+  width: 320px;
+  max-width: 320px;
   height: 440px;
   margin: 0;
-  overflow: visible;
+  overflow: hidden;
 }
 
 .services__cards {
-  width: 1024px;
-  max-width: 1024px;
+  width: 320px;
+  max-width: 320px;
   height: 416px;
   margin: 0;
   padding: 0;
@@ -49,8 +51,8 @@
 
 .services__pagination {
   top: 494px;
-  left: 128px;
-  transform: none;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 @media (min-width: 480px) {
@@ -59,7 +61,7 @@
   }
 
   .services__slider {
-    width: 1024px;
+    width: 320px;
   }
 }
 
@@ -72,11 +74,11 @@
   }
 
   .services__container {
-    width: 1024px;
+    width: 672px;
     height: 502px;
-    max-width: none;
-    margin-left: 20px;
-    margin-right: 0;
+    max-width: calc(100vw - 40px);
+    margin-left: auto;
+    margin-right: auto;
     padding: 0;
   }
 
@@ -307,21 +309,21 @@
   }
 
   .services__slider {
-    width: 1024px;
-    max-width: 1024px;
+    width: 672px;
+    max-width: calc(100vw - 40px);
     height: 440px;
-    overflow: visible;
+    overflow: hidden;
   }
 
   .services__pagination {
     top: 494px;
-    left: 128px;
-    transform: none;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .services__cards {
-    width: 1024px;
-    max-width: 1024px;
+    width: 672px;
+    max-width: calc(100vw - 40px);
     height: 416px;
     padding: 0;
   }
@@ -510,6 +512,8 @@
 
   .services__slider,
   .services__cards {
+    width: 1024px;
+    max-width: 1024px;
     margin-left: auto;
     margin-right: auto;
   }
